Bug 454191 - The "fill layer" generated by dragging and dropping colors is not translated
Summary: The "fill layer" generated by dragging and dropping colors is not translated
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (show other bugs)
Version: 5.0.6
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-22 03:50 UTC by thetwo
Modified: 2022-05-22 06:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
gif (88.04 KB, image/gif)
2022-05-22 03:50 UTC, thetwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thetwo 2022-05-22 03:50:59 UTC
Created attachment 149098 [details]
gif

As shown in the gif, the "fill layer" is still in English, but the sequence after it is correct.
Comment 1 Lynx3d 2022-05-22 06:10:32 UTC
Git commit c7800eb37496e647f6ca821685d8d3fc2dcf77d0 by Mathias Wein.
Committed on 22/05/2022 at 05:55.
Pushed by mwein into branch 'master'.

Localize fill layer names created by drag&drop

M  +2    -1    libs/ui/kis_mimedata.cpp

https://invent.kde.org/graphics/krita/commit/c7800eb37496e647f6ca821685d8d3fc2dcf77d0