Localize fill layer names created by drag&drop

BUG:454191